--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
     <script nomodule src="/build/wc-window.js"></script>
   </head>
   <body>
-    <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+      <wc-fixed-length-list num-items=1000 item-height=50 window-height=400></wc-fixed-length-list>
   </body>
 </html>
