initial testing work

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <script nomodule src="/build/wc-window.js"></script>
   </head>
   <body>
-      <wc-fixed-length-list num-items=1000 item-height=50 window-height=400></wc-fixed-length-list>
+      <!-- <wc-fixed-length-list></wc-fixed-length-list> -->
+      <wc-fixed-length-list num-items=10000 item-height=50 window-height=400></wc-fixed-length-list>
   </body>
 </html>
